@@ -12,7 +12,7 @@ pipeline {
         NEXUS_PASS       = 'admin1234'
         RELEASE_REPO     = 'vprofile-release'
         CENTRAL_REPO     = 'vprofile-central'
-        NEXUSIP          = '172.31.92.9'
+        NEXUSIP          = '172.31.6.178'
         NEXUSPORT        = '8081'
         NEXUS_GRP_REPO   = 'vprofile-group'
         NEXUS_LOGIN      = 'nexuslogin'
@@ -34,7 +34,7 @@ pipeline {
             }
         }
 
-        stage("Unit Test") {
+         stage("Unit Test") {
             steps {
                 sh "mvn -s settings.xml test"
             }
@@ -45,48 +45,6 @@ pipeline {
                 sh "mvn -s settings.xml checkstyle:checkstyle"
             }
         }
-
-        stage('Sonar Analysis') {
-            environment {
-                scannerHome = tool "${SONARSCANNER}"
-                SONAR_SCANNER_OPTS = "--add-opens java.base/java.lang=ALL-UNNAMED"
-            }
-            steps {
-                withSonarQubeEnv("${SONARSERVER}") {
-                    sh '''${scannerHome}/bin/sonar-scanner \
-                      -Dsonar.projectKey=vprofile \
-                      -Dsonar.projectName=vprofile \
-                      -Dsonar.projectVersion=1.0 \
-                      -Dsonar.sources=src/ \
-                      -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-                      -Dsonar.junit.reportsPath=target/surefire-reports/ \
-                      -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                      -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
-                }
-            }
-        }
-
-        
-        stage("UploadArtifact"){
-            steps{
-                nexusArtifactUploader(
-                  nexusVersion: 'nexus3',
-                  protocol: 'http',
-                  nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
-                  groupId: 'QA',
-                  version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
-                  repository: "${RELEASE_REPO}",
-                  credentialsId: "${NEXUS_LOGIN}",
-                  artifacts: [
-                    [artifactId: 'vproapp',
-                     classifier: '',
-                     file: 'target/vprofile-v2.war',
-                     type: 'war']
-                  ]
-                )
-            }
-        }
-
 
     }
 }
